csl tracker view added

--- a/connect-web/src/component/home/cslstrategyview.css
+++ b/connect-web/src/component/home/cslstrategyview.css
@@ -80,7 +80,7 @@ textarea:focus, input:focus {
   margin: 0 auto;
 }
 
-.csl-block-view {
+.csl-strategy-view {
   width: 30%;
   background: #d1d1d1;
 }
@@ -95,17 +95,17 @@ table {
 
 th, td {
   font-weight: unset;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 .column100 {
   width: 130px;
-  padding-left: 1px;
+  padding-left: 25px;
 }
 
 .column100.column1 {
   width: 265px;
-  padding-left: 1px;
+  padding-left: 42px;
 }
 
 .row100.head th {
