--- a/connect-react/src/components/events.css
+++ b/connect-react/src/components/events.css
@@ -9,6 +9,8 @@
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
+    padding-left:4px;
+    padding-right:4px;
   }
   
   .button span {
