--- a/connect-react/src/App.css
+++ b/connect-react/src/App.css
@@ -8,6 +8,12 @@ label {
   padding: 40px 40px;
 }
 
+.container
+{
+
+  margin-left:0px;
+}
+
 .card {
   background-color: #f7f7f7;
   padding: 20px 25px 30px;
