--- a/connect-react/src/components/events.css
+++ b/connect-react/src/components/events.css
@@ -183,7 +183,7 @@
     color: #333;
     cursor: default;
     outline: none;
-    padding: 1px 30px 1px 7px;
+    padding: 1px 30px 1px 7pxp;
     transition: all 200ms ease;
 }
 .Dropdown-arrow {
