--- a/connect-react/src/components/flight-booking/flight.css
+++ b/connect-react/src/components/flight-booking/flight.css
@@ -27,10 +27,22 @@
     font-size:12px;
     text-align: center;
     color:white;
-    height:45px;
+    
     padding:10px;
 
 }
+.pheader1
+{
+    background-color: rgb(50, 54, 57);
+    box-shadow: 0 0 8px rgba(0, 0, 0, .5);
+    font-size:12px;
+    text-align: center;
+    color:white;
+    
+    padding:2px;
+
+}
+
 
 .summary{
     width:30%;
